--- a/src/app/Components/board/board.component.scss
+++ b/src/app/Components/board/board.component.scss
@@ -29,6 +29,9 @@
             &.hit {
                 background-color: red;
             }
+            &.game-over{
+                background-color: rgb(27, 27, 170);
+            }
         }
     }
         
