--- a/src/app/Components/board/board.component.html
+++ b/src/app/Components/board/board.component.html
@@ -9,15 +9,16 @@
         </thead>
         <tbody>
             <tr class="column" *ngFor="let col of board[0]; index as i">
-                <td>{{i+1}}</td>
+                <th>{{i+1}}</th>
                 <td class="cell" *ngFor="let row of board; index as j" (click)="clickCell(i,j)"
-                    [ngClass]="{'hit': board[i][j] === 'hit', 'miss' :  board[i][j] === 'miss' }">
+                    [ngClass]="{'ship' :  board[i][j].includes('ship') ,'hit': board[i][j] === 'hit', 'miss' :  board[i][j] === 'miss', 'ship-start': board[i][j].includes('ship-start'),'ship-end': board[i][j].includes('ship-end'),'ship-one': board[i][j].includes('ship-one'), 'game-over':gameOver }">
+                    <span *ngIf="board[i][j].includes('ship') || board[i][j].includes('hit')">ship</span>
                 </td>
             </tr>
         </tbody>
     </table>
     <div *ngIf="gameOver">
         <p>You won!!!!</p>
-        <button (click)="startGame()">Restart Game</button>
+        <!-- <button (click)="startGame()">Restart Game</button> -->
     </div>
 </div>
