--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-body{
-    background-color:  #e7e7e7;
-
+body {
+    background-color: #e7e7e7;
+    margin: 0;
+    padding: 0;
 }
