--- a/src/app/Components/board/board.component.scss
+++ b/src/app/Components/board/board.component.scss
@@ -23,7 +23,6 @@
         @media (max-width:600px) {
             margin: 0 8px;
             overflow-x: scroll;
-
         }
 
         .column {
@@ -32,11 +31,9 @@
                 height: 50px;
                 font-weight: bold;
                 background-color: #719894;
-                // margin: 5px;
                 border-radius: 5px;
                 cursor: pointer;
                 box-sizing: border-box;
-                border: 3px solid transparent;
 
                 @media (max-width:600px) {
                     width: 42px;
@@ -45,7 +42,8 @@
                     min-height: 42px;
                 }
 
-                &:hover {
+                &:hover,
+                &.hover {
                     background-color: rgb(113, 152, 148, 0.7);
                 }
 
@@ -55,34 +53,20 @@
 
                 &.hit {
                     background-color: red;
-                    border-inline-start: 3px solid transparent;
                 }
 
                 &.game-over {
                     background-color: rgb(27, 27, 170);
-                    border-inline-start: 3px solid transparent;
                 }
+
 
                 &.ship {
-                    border-inline-start: 3px solid transparent;
                     border-top: 3px solid #000;
                     border-bottom: 3px solid #000;
-
-                    &-start {
-                        border-inline-start: 3px solid #000;
-                    }
-
-                    &-end {
-                        border-inline-end: 3px solid #000;
-                    }
-
-                    &-one {
-                        border-inline-start: 3px solid #000;
-                        border-inline-end: 3px solid #000;
-                    }
                 }
             }
-            &.game-over{
+
+            &.game-over {
                 background-color: rgb(27, 27, 170);
             }
         }
