--- a/src/app/Components/board/board.component.scss
+++ b/src/app/Components/board/board.component.scss
@@ -29,10 +29,8 @@
             .cell {
                 width: 50px;
                 height: 50px;
-                font-weight: bold;
                 background-color: #719894;
                 border-radius: 5px;
-                cursor: pointer;
                 box-sizing: border-box;
 
                 @media (max-width:600px) {
@@ -40,6 +38,17 @@
                     height: 42px;
                     min-width: 42px;
                     min-height: 42px;
+                }
+                
+                button {
+                    font-weight: bold;
+                    width: 100%;
+                    height: 100%;
+                    background: none;
+                    color: inherit;
+                    border: none;
+                    cursor: pointer;
+                    font: inherit;
                 }
 
                 &:hover,
@@ -77,7 +86,7 @@
         font-weight: bold;
     }
 
-    button {
+    .restartBtn {
         background-color: #FF9569;
         font-size: 16px;
         border-radius: 5px;
